@startuml ClassiDiAnalisi_HackHub
title Diagramma delle Classi di Analisi (BCE) — HackHub, 1a iterazione

' ============================================================================
'  CONVENZIONI BCE (Jacobson)
'  ------------------------------------------------------------
'   <<boundary>>  interfaccia verso attore / sistema esterno
'   <<control>>   orchestra il caso d'uso (1 per UC)
'   <<entity>>    oggetto di dominio, persistente o concettuale
'
'   Regole di interazione:
'   Boundary <-> Control       (mai Boundary <-> Boundary)
'   Control  <-> Entity        (mai Boundary <-> Entity diretta)
'   Entity   <-> Entity        (associazioni di dominio)
' ============================================================================

' ----- Convenzioni di rendering -----
skinparam linetype ortho
skinparam nodesep 40
skinparam ranksep 55
skinparam shadowing false
skinparam roundCorner 8
skinparam packageStyle rectangle

skinparam class {
  BackgroundColor<<boundary>>  #E3F2FD
  BorderColor<<boundary>>      #1565C0
  BackgroundColor<<control>>   #FFF8E1
  BorderColor<<control>>       #F57F17
  BackgroundColor<<entity>>    #E8F5E9
  BorderColor<<entity>>        #2E7D32
  BackgroundColor<<actor>>     #ECF0F1
  BorderColor<<actor>>         #2C3E50
  FontSize                     11
}

' ============================================================================
'  FASCIA 1 — ATTORI (in alto)
' ============================================================================
class "Organizzatore" as AOrg <<actor>>
class "Membro Team"   as AMT  <<actor>>
class "Giudice"       as AGiu <<actor>>

AOrg -[hidden]right- AMT
AMT  -[hidden]right- AGiu

' ============================================================================
'  FASCIA 2 — STRATO BOUNDARY + CONTROL (1 package per UC)
' ============================================================================

package "UC02 — Crea Hackathon" as P02 #FAFAFA {
  class CreaHackathonBoundary  <<boundary>>
  class CreaHackathonControl   <<control>>
  CreaHackathonBoundary -- CreaHackathonControl
}

package "UC03 — Iscrivi Team" as P03 #FAFAFA {
  class IscriviTeamBoundary    <<boundary>>
  class IscriviTeamControl     <<control>>
  IscriviTeamBoundary -- IscriviTeamControl
}

package "UC04 — Invia Sottomissione" as P04 #FAFAFA {
  class InviaSottomissioneBoundary <<boundary>>
  class InviaSottomissioneControl  <<control>>
  InviaSottomissioneBoundary -- InviaSottomissioneControl
}

package "UC05 — Valuta Sottomissione" as P05 #FAFAFA {
  class ValutaSottomissioneBoundary <<boundary>>
  class ValutaSottomissioneControl  <<control>>
  ValutaSottomissioneBoundary -- ValutaSottomissioneControl
}

' Forza i 4 package UC in riga orizzontale
P02 -[hidden]right- P03
P03 -[hidden]right- P04
P04 -[hidden]right- P05

' Attori → Boundary del proprio UC
AOrg --> CreaHackathonBoundary
AMT  --> IscriviTeamBoundary
AMT  --> InviaSottomissioneBoundary
AGiu --> ValutaSottomissioneBoundary

' ============================================================================
'  FASCIA 3 — STRATO ENTITY (Dominio condiviso, in basso)
' ============================================================================

package "Dominio (Entity)" as DOM #F1F8E9 {

  class HackHub <<entity>> {
    nome
  }

  class Hackathon <<entity>> {
    nome
    regolamento
    scadenzaIscrizioni
    dataInizio
    dataFine
    luogo
    premio
    dimensioneMaxTeam
    statoCorrente
  }

  class Team <<entity>> {
    nome
  }

  class Utente <<entity>> {
    nome
    cognome
    email
  }

  abstract class MembroStaff <<entity>>
  class Organizzatore        <<entity>>
  class Giudice              <<entity>>
  class Mentore              <<entity>>

  class Sottomissione <<entity>> {
    titolo
    descrizione
    link
    timestampInvio
  }

  class Valutazione <<entity>> {
    punteggio
    giudizioScritto
    timestamp
  }

  ' --- Gerarchia ---
  Utente      <|-- MembroStaff
  MembroStaff <|-- Organizzatore
  MembroStaff <|-- Giudice
  MembroStaff <|-- Mentore

  ' --- Associazioni di dominio ---
  HackHub "1" *-- "*"    Hackathon     : > contiene
  HackHub "1" *-- "*"    Utente        : > registra

  Hackathon "*" -- "1"    Organizzatore : creatore   >
  Hackathon "*" -- "1"    Giudice       : valutatore >
  Hackathon "*" -- "1..*" Mentore       : staff      >

  Hackathon "*" -- "*"    Team          : iscrizioni >
  Team      "*" -- "1..*" Utente        : membri     >

  Hackathon "1" *-- "*"   Sottomissione : > raccoglie
  Team      "1" -- "*"    Sottomissione : invia >

  Sottomissione "1" *-- "*" Valutazione : > valutazioni
  Valutazione  "*" -- "1"   Giudice     : firmata da >
}

' ============================================================================
'  CONNESSIONI CONTROL → ENTITY (raggruppate per UC)
' ============================================================================

' --- UC02 ---
CreaHackathonControl ..> HackHub         : registra
CreaHackathonControl ..> Hackathon       : crea

' --- UC03 ---
IscriviTeamControl   ..> Hackathon       : iscrive in
IscriviTeamControl   ..> Team            : iscrive

' --- UC04 ---
InviaSottomissioneControl ..> Hackathon     : verifica
InviaSottomissioneControl ..> Sottomissione : crea

' --- UC05 ---
ValutaSottomissioneControl ..> Sottomissione : aggiorna
ValutaSottomissioneControl ..> Valutazione   : crea

' ============================================================================
'  NOTE compatte
' ============================================================================
note bottom of HackHub
  Radice del modello — **non Singleton**.
  GRASP: Information Expert.
end note

note bottom of Hackathon
  ``statoCorrente`` qui è un attributo;
  in progetto diventa pattern **State**.
end note

note bottom of Valutazione
  Invariante:
  ``punteggio`` ∈ [0..10], ``giudizioScritto`` ≠ ∅.
end note

' ============================================================================
'  LEGENDA
' ============================================================================
legend right
  ==
  **Convenzioni BCE (Jacobson)**
  ==
  | Stereotipo    | Ruolo                  |
  | <<boundary>>  | interfaccia attore     |
  | <<control>>   | coordinatore di un UC  |
  | <<entity>>    | oggetto di dominio     |
  ----
  Le control sono indipendenti (1 per UC);
  condividono il modello entity.
endlegend

@enduml
